--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>网易严选_yoo</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_521936_l2m6baw5kf8yqfr.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_518606_snabom9h9y1wz5mi.css">
-    <link rel="stylesheet" href="./static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/reset.css">
     <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <script>
       if ('addEventListener' in document) {
@@ -30,10 +30,10 @@
   <!--</script>-->
   <script>
     (function () {
-     var styleNode = document.createElement('style')
-     var w = document.documentElement.clientWidth/10
-     styleNode.innerHTML = 'html{font-size:'+ w +'px!important}'
-     document.head.appendChild(styleNode)
-   })()
+      var styleNode = document.createElement('style')
+      var w = document.documentElement.clientWidth/10
+      styleNode.innerHTML = 'html{font-size:'+ w +'px!important}'
+      document.head.appendChild(styleNode)
+    })()
   </script>
 </html>
